--- a/01-roman-cart/package.json
+++ b/01-roman-cart/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@tailwindcss/vite": "^4.1.17",
     "lucide": "^0.553.0",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.17"
